# qchat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: release.yml
resources/: app.rc  resources.qrc
scripts/: build_linux.sh  build_windows.bat
src/: main.cpp
src/core/: ChatManager.cpp  ChatManager.h  ClaudeProvider.cpp  ClaudeProvider.h  ConversationListModel.cpp  ConversationListModel.h  DocumentParser.cpp  DocumentParser.h  ExportHelper.cpp  ExportHelper.h  ExternalAgentProvider.cpp  ExternalAgentProvider.h  ImageGenProvider.cpp  ImageGenProvider.h  ImageHelper.cpp  ImageHelper.h  MarkdownHelper.cpp  MarkdownHelper.h  MessageModel.cpp  MessageModel.h  ModelProvider.h  OllamaProvider.cpp  OllamaProvider.h  OpenAIProvider.cpp  OpenAIProvider.h  PromptLibrary.cpp  PromptLibrary.h  SandboxManager.cpp  SandboxManager.h  SettingsManager.cpp  SettingsManager.h  ThinkingParser.cpp  ThinkingParser.h  VoiceManager.cpp  VoiceManager.h
src/qml/: AgentsPage.qml  CallsPage.qml  ChatInputBar.qml  ChatPage.qml  ChatView.qml  ConversationSettings.qml  DocumentChip.qml  ImageGenPage.qml  Main.qml  McpPage.qml  MessageBubble.qml  NewConversationDialog.qml  PromptLibraryDialog.qml  ProviderConfig.qml  ProviderConfigPanel.qml  SettingsDialog.qml  SettingsPage.qml  Sidebar.qml  SkillsPage.qml  Tag.qml  ThinkingBlock.qml  ToolSettingsDialog.qml  WelcomePage.qml  WelcomeView.qml
src/qml/components/: IconButton.qml
